Add ordering of transactions by category, date, amount. FIX validation of transaction
